--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,19 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "api-performance",
+      "urls": [
+          "/api/tst"
+      ],
+      "cacheConfig": {
+        "maxSize": 100,
+        "maxAge": "1d",
+        "timeout": "1s",
+        "strategy": "performance"
+      }
+    }
   ]
 }
